# PDF_RAG

./: .env.example  .gitignore  README.md  app_settings.env.example  pyproject.toml  requirements.txt  run_api.py  run_pdf_rag.py
docs/: COMO_RODAR.md
pdf_rag/: __init__.py  __main__.py  analysis_service.py  cli.py  config.py  database.py  embeddings.py  image_pipeline.py  images.py  ocr_service.py  pipeline.py  processor.py  text_pipeline.py  tokens.py  vision.py
pdf_rag/controllers/: images.py  processor.py
pdf_rag/models/: __init__.py  config.py  constants.py  database.py
pdf_rag/views/: api.py  cli.py
